@@ -2,8 +2,11 @@
 
 module Development.Shake.Report(ReportEntry(..), ReportTrace(..), buildReport) where
 
+import General.Base
+import Control.Arrow
 import Control.Monad
 import Data.Char
+import Data.Function
 import Data.List
 import System.FilePath
 import Paths_shake
@@ -14,6 +17,7 @@ data ReportEntry = ReportEntry
     {repName :: String, repBuilt :: Int, repChanged :: Int, repDepends :: [Int], repExecution :: Double, repTraces :: [ReportTrace]}
 data ReportTrace = ReportTrace
     {repCommand :: String, repStart :: Double, repStop :: Double}
+repTime ReportTrace{..} = repStop - repStart
 
 
 -- | Generates an report given some build system profiling data.
@@ -21,12 +25,31 @@ buildReport :: [ReportEntry] -> FilePath -> IO ()
 buildReport reports out
     | takeExtension out == ".js" = writeFile out $ "var shake = \n" ++ showJSON reports
     | takeExtension out == ".json" = writeFile out $ showJSON reports
+    | out == "-" = putStr $ unlines $ reportSummary reports
     | otherwise = do
         htmlDir <- getDataFileName "html"
         report <- LBS.readFile $ htmlDir </> "report.html"
         let f name | name == "data.js" = return $ LBS.pack $ "var shake = \n" ++ showJSON reports
                    | otherwise = LBS.readFile $ htmlDir </> name
         LBS.writeFile out =<< runTemplate f report
+
+
+reportSummary :: [ReportEntry] -> [String]
+reportSummary xs =
+    ["* This database has tracked " ++ show (maximum (0 : map repChanged xs) + 1) ++ " runs."
+    ,let f = show . length in "There are " ++ f xs ++ " rules (" ++ f ls ++ " rebuilt in the last run)."
+    ,let f = show . sum . map (length . repTraces) in "* Building required " ++ f xs ++ " traced commands (" ++ f ls ++ " in the last run)."
+    ,"* The total (unparallelised) build time is " ++ showTime (sum $ map repExecution xs) ++
+        " of which " ++ showTime (sum $ map repTime $ concatMap repTraces xs) ++ " is traced commands."
+    ,let f = (\(a,b) -> showTime a ++ " (" ++ b ++ ")") . maximumBy (compare `on` fst) in
+        "* The longest rule takes " ++ f (map (repExecution &&& repName) xs) ++
+        ", and the longest traced command takes " ++ f (map (repTime &&& repCommand) $ concatMap repTraces xs) ++ "."
+    ,let sumLast = sum $ map repTime $ concatMap repTraces ls
+         maxStop = maximum $ 0 : map repStop (concatMap repTraces ls) in
+        "* Last run gave an average parallelism of " ++ showDP 2 (if maxStop == 0 then 0 else sumLast / maxStop) ++
+        " times over " ++ showTime(maxStop) ++ "."
+    ]
+    where ls = filter ((==) 0 . repBuilt) xs
 
 
 showJSON :: [ReportEntry] -> String
